@@ -140,6 +140,9 @@ Core and Builtins
 Library
 -------
 
+- Issue 11916: Add a number of MacOSX specific definitions to the errno module.
+  Patch by Pierre Carrier.
+
 - Issue 11999: fixed sporadic sync failure mailbox.Maildir due to its trying to
   detect mtime changes by comparing to the system clock instead of to the
   previous value of the mtime.
